# async_summarize

./: .env  .gitignore  LICENSE  README.md  async_helpers.py  config-jondurbin_airoboros-m-7b-3.1.2.yaml  config-runpod-2xA100-jondurbin_airoboros-l2-70b-3.1.2.yaml  config-u-jondurbin_airoboros-m-7b-3.1.2.yaml  config.yaml  main.py  prompt-airoboros-default-summarize-130.yaml  prompt-airoboros-extended-summarize-130.yaml  prompt-mistral_instruct_v0.2.yaml  prompt.yaml  pyproject.toml  sync_helpers.py
