[tool.poetry]
name = "async_summarize"
version = "0.1.0"
description = "An asynchronous summarization script."
authors = ["Wolfsauge <no@email>"]
license = "MIT"
readme = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.3"
httpx = "^0.27.0"
openai = "^1.12.0"
transformers = "^4.38.1"
langchain = "^0.1.9"
tqdm = "^4.66.2"
icecream = "^2.1.3"
python-dotenv = "^1.0.1"
semantic-text-splitter = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
